--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
     "start": "vite",
     "dev": "vite",
     "build": "vite build",
-    "serve": "vite preview"
+    "serve": "vite preview",
+    "format": "npx prettier --write ."
   },
   "license": "MIT",
   "devDependencies": {
+    "prettier": "2.7.1",
     "vite": "^3.0.0",
     "vite-plugin-solid": "^2.3.0"
   },
