--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   },
   "license": "MIT",
   "devDependencies": {
+    "autoprefixer": "^10.4.8",
+    "postcss": "^8.4.16",
     "prettier": "2.7.1",
+    "tailwindcss": "^3.1.8",
     "vite": "^3.0.0",
     "vite-plugin-solid": "^2.3.0"
   },
